# akgentic

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
data/catalog/agents/: assistant.yaml  expert.yaml  human-proxy.yaml  manager.yaml
data/catalog/templates/: team-prompt.yaml
data/catalog/tools/: knowledge-graph.yaml  vector-store.yaml  web-search.yaml
scripts/: build-archive.sh  build-sandbox-image.sh  migrate  sync-packages.sh  trigger-ci.sh
src/: infra_server.py
src/accounting_team/: agents.py  config_v1.yaml  main.py  tools.py
src/agent_team/: agents.py  main.py  tools.py
src/catalog/: main.py
src/catalog/agents/: assistant.yaml  expert.yaml  human-support.yaml  manager.yaml
src/catalog/teams/: agent-team.yaml  test-team.yaml
src/catalog/templates/: test-prompt.yaml
src/catalog/tools/: knowledge-graph.yaml  planning.yaml  sandbox.yaml  workspace.yaml
src/infra/: run.sh  server.py
